<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">badr3180_Assignment</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="LoginName">Login</string>
    <string name="hintText">Login Name</string>
    <string name="Password">Password</string>
    <string name="switchText">What does this do?</string>
    <string name="radioButton">RadioButton</string>
    <string name="checkBox">CheckBox</string>
    <string name="preference_name">myPreferences</string>
    <string name="key_email">EmailKey</string>
    <string name="dialog_message">Do you want to Finish the Activity ?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="switch_Off">Switch is OFF</string>
    <string name="switch_on">Switch is ON</string>
    <string name="response">Here is my response</string>
    <string name="chatBTN">Start Chat</string>
    <string name="chatMSGHint">enter message</string>
    <string name="Send">Send</string>
    <string name="ToolbarBTN">Test Toolbar</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_toast">Version 1.0, by Roshan</string>
    <string name="about">About</string>
    <string name="option1snack">You selected item 1</string>
    <string name="floating_snack">Assignment 2 Floating button snackbar</string>
    <string name="custom_dialog_title">Do you want to go back?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ivalid_email">Invalid Email</string>
    <string name="invalid_pwd">Invalid  or empty Password</string>
    <string name="null_field">Field cannot be empty</string>
    <string name="WeatherForecast">"WeatherForecast "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="showurl">ShowURL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_this_message">DELETE THIS MESSAGE</string>
    <string name="MessageHere">Message Here</string>
    <string name="id">ID=</string>


</resources>